--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,39 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext {
+        kotlin_version = '1.2.71'
+        support_version = '27.1.1'
+        constraintlayout_version = '1.1.3'
+        gradle_version = '3.2.1'
+
+        glide_version = '4.7.1'
+        dagger_version = '2.11'
+        javaxinject_version = '1'
+        gson_version = '2.8.1'
+        rxjava_version = '2.0.2'
+        rxandroid_version = '2.0.2'
+
+        junit_version = '4.12'
+        mockito_version = '1.6.0'
+        robolectricVersion = '3.4.2'
+        assertj_version = '3.8.0'
+        testrunner_version = '1.0.2'
+        espresso_version = '3.0.2'
+    }
+
     repositories {
         google()
         jcenter()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "io.realm:realm-gradle-plugin:5.8.0"
     }
 }
 
