--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
-            android:name=".PokemonFinderApplication">
+            android:name=".PokemonFinderApp">
 
         <activity android:name=".ui.main.MainActivity">
             <intent-filter>
