--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
         rxjava_version = '2.0.2'
         rxandroid_version = '2.0.2'
 
+        dagger2_version = '2.15'
+
         junit_version = '4.12'
         mockito_version = '1.6.0'
         robolectricVersion = '3.4.2'
