--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         constraintlayout_version = '1.1.3'
         gradle_version = '3.2.1'
 
+        timber_version = '4.5.1'
         glide_version = '4.7.1'
         dagger_version = '2.11'
         javaxinject_version = '1'
