--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,16 @@
 
         <activity android:name=".ui.trainer.RegisterTrainerActivity"/>
         <activity android:name=".ui.trainer.SelectPokemonActivity"/>
-        <activity android:name=".ui.pokemon.search.PokemonSearchActivity"/>
+
+        <activity android:name=".ui.pokemon.search.PokemonSearchActivity"
+                    android:theme="@style/AppThemeSearchView">
+
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.SEARCH"></action>-->
+            <!--</intent-filter>-->
+            <!--<meta-data android:name="android.app.searchable" android:resource="@xml/searchable"></meta-data>-->
+        </activity>
+
     </application>
 
 </manifest>
