--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:support-v4:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
-    implementation "com.android.support.constraint:constraint-layout:$constraintlayout_version"
+    implementation "com.android.support:design:$support_version"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
