--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,13 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".PokemonFinderApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            android:name=".PokemonFinderApp">
+            android:theme="@style/AppTheme">
 
         <activity android:name=".ui.main.MainActivity">
             <intent-filter>
@@ -21,16 +21,15 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.main.SplashActivity"/>
         <activity android:name=".ui.trainer.RegisterTrainerActivity"/>
         <activity android:name=".ui.trainer.SelectPokemonActivity"/>
 
-        <activity android:name=".ui.pokemon.search.PokemonSearchActivity"
-                    android:theme="@style/AppThemeSearchView">
-
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.SEARCH"></action>-->
-            <!--</intent-filter>-->
-            <!--<meta-data android:name="android.app.searchable" android:resource="@xml/searchable"></meta-data>-->
+        <activity android:name=".ui.pokemon.search.PokemonSearchActivity">
+             <intent-filter>
+                <action android:name="android.intent.action.SEARCH"></action>
+             </intent-filter>
+             <meta-data android:name="android.app.searchable" android:resource="@xml/searchable"/>
         </activity>
 
     </application>
