--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
         constraintlayout_version = '1.1.3'
         gradle_version = '3.2.1'
 
-        timber_version = '4.5.1'
-        glide_version = '4.7.1'
+        timber_version = '4.7.1'
+        glide_version = '4.8.0'
         dagger_version = '2.11'
         javaxinject_version = '1'
         gson_version = '2.8.1'
@@ -19,6 +19,7 @@ buildscript {
 
         junit_version = '4.12'
         mockito_version = '1.6.0'
+        mockito_kotlin_version = '2.1.0'
         robolectricVersion = '3.4.2'
         assertj_version = '3.8.0'
         testrunner_version = '1.0.2'
