--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,14 +92,23 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
-    // Testing
+    // Unit Testing
     testImplementation "junit:junit:$junit_version"
     testImplementation "com.nhaarman:mockito-kotlin:$mockito_version"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_kotlin_version"
     testImplementation "org.assertj:assertj-core:$assertj_version"
-    testImplementation "org.robolectric:robolectric:$robolectricVersion"
+
+    // Instrumentation Testing
+    androidTestImplementation("com.android.support.test.espresso:espresso-contrib:$espresso_version") {
+        exclude module: 'appcompat-v7'
+        exclude module: 'support-v4'
+        exclude module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+        exclude module: 'design'
+    }
 
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espresso_version"
+    testImplementation "org.robolectric:robolectric:$robolectricVersion"
     androidTestImplementation "com.android.support.test:runner:$testrunner_version"
 }
