--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-
+        <activity android:name=".ui.pokemon.detail.PokemonDetailActivity">
+        </activity>
         <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -20,18 +21,24 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity android:name=".ui.main.SplashActivity"/>
         <activity android:name=".ui.trainer.RegisterTrainerActivity"/>
         <activity android:name=".ui.trainer.SelectPokemonActivity"/>
+        <activity
+                android:name=".ui.pokemon.search.PokemonSearchActivity"
+                android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+            </intent-filter>
 
-        <activity android:name=".ui.pokemon.search.PokemonSearchActivity">
-             <intent-filter>
-                <action android:name="android.intent.action.SEARCH"></action>
-             </intent-filter>
-             <meta-data android:name="android.app.searchable" android:resource="@xml/searchable"/>
+            <meta-data
+                    android:name="android.app.searchable"
+                    android:resource="@xml/searchable"/>
         </activity>
 
+        <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".PokemonSearchActivity"/>
     </application>
 
 </manifest>
